mini task popup animation

--- a/html/boardIndex.html
+++ b/html/boardIndex.html
@@ -107,7 +107,7 @@
         </div>
 
         <div id="fullscreenBackground" onclick="closeFullscreen()" class="d-none"></div>
-        <div id="FsTask" class="d-none task"></div>
+        <div id="FsTask" class="task"></div>
     </div>
     <div id="deleteBackground" class="d-none">
         <div class="deletePopup">
