animate every popup

--- a/html/contact.html
+++ b/html/contact.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <div id="popUpWindow" class="d-none"></div>
+    <div id="popUpWindow" class=""></div>
     <div id="fullscreenBackground" class="d-none" onclick="closeFullscreenContacts()"></div>
     <div>
         <div id="tasks" class="d-none"></div>
