--- a/html/template.html
+++ b/html/template.html
@@ -49,7 +49,7 @@
                 </div>
             </a>
 
-            <a id="side-menu-link1" href="../html/boardIndex.html">
+            <a id="side-menu-link1" href="../html/board.html">
                 <div class="menu-links">
                     <img class="side-menu-img" src="../img/boardIcon.svg">
                     <div class="side-bar-text">Board</div>
