addtask form validator onchange

--- a/html/datenschutz.html
+++ b/html/datenschutz.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/templatesStyle.css">
     <link rel="stylesheet" href="../css/datenschutz.css">
     <link rel="stylesheet" href="../css/globalStyle.css">
-    
+
     <link rel="icon" type="image/x-icon" href="../img/logoDark.svg">
 </head>
 
@@ -28,15 +28,12 @@
             <h1>Impressum</h1>
 
             <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
-            <p>Max Mustermann<br />
-                Musterstra&szlig;e 111<br />
-                Geb&auml;ude 44<br />
-                90210 Musterstadt</p>
+            <p>Elijah Degen<br />
+                78467 Konstanz</p>
 
             <h2>Kontakt</h2>
-            <p>Telefon: +49 (0) 123 44 55 66<br />
-                Telefax: +49 (0) 123 44 55 99<br />
-                E-Mail: mustermann@musterfirma.de</p>
+            <p>E-Mail: elidegen@gmail.com</p>
+            <p>Weitere Daten auf Anfrage</p>
             <p>Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></p>
         </div>
 
