--- a/html/addtask.html
+++ b/html/addtask.html
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <div class="dropdown" id="categoryDropdown">
-                            <button type="button" onclick="showDropdownATP('myDropdownATP')" class="dropbtn">
+                            <button type="button" onclick="showDropdown('myDropdownATP')" class="dropbtn">
                                 <span id="dropbtnCategory">choose Category</span>
                                 <img src="../img/arrowDropDown.png">
                             </button>
@@ -78,7 +78,7 @@
                         <h4>Assigned to <p class="redStar d-none">*</p>
                         </h4>
                         <div class="dropdown">
-                            <button type="button" onclick="showDropdownATP('myAssignedDropdownATP')" class="dropbtn">
+                            <button type="button" onclick="showDropdown('myAssignedDropdownATP')" class="dropbtn">
                                 <span id="dropbtnAssigned">choose Contact</span>
                                 <img src="../img/arrowDropDown.png"></button>
                             <div id="myAssignedDropdownATP" class="dropdown-content d-none">
