--- a/html/resetPassword.html
+++ b/html/resetPassword.html
@@ -7,21 +7,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Password</title>
 
-    <script src="../smallest_backend_ever/mini_backend.js"></script>
     <script src="../js/index.js"></script>
-
-    <link rel="stylesheet" href="../css/resetPassword.css">
-    <link rel="stylesheet" href="../css/mobileStyle.css">
-
+    <script src="../js/mini_backend.js"></script>
+    <script src="../js/globalVar.js"></script>
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/globalStyle.css">
     <link rel="icon" type="image/x-icon" href="../img/logoDark.svg">
 </head>
 
 <body onload="onPageLoad()">
-    <div id="headpart">
-        <img id="desktopLogo" src="../img/join_logo.svg" alt="" />
-    </div>
+    <div id="joinLogo" style="top: 15px; left: 15px; transform: translate(0, 0);"></div>
+    <div class="container" id="container">
+        <div class="login">
+            <h1>Reset password</h1>
+            <div class="loginFields">
+                <div class="globalInput">
+                    <input id="setPassword" required type="password" placeholder="New password">
+                </div>
+                <div class="globalInput">
+                    <input id="confirmPassword" required type="password" placeholder="Confirm password" >
+                </div>
+                <div class="wrongLogin" id="loginFail"></div>
+            </div>
+            
+            <div class="loginButtons">
+                <div class="buttonGlobal1" onclick="changePassword()">
+                    <p>Continue</p>
+                </div>
+            </div>
 
-    <div id="container">
+        </div>
+    </div>
+    <!-- <div id="container">
         <main id="resetPwContainer">
             <a href="../index.html" class="backBtn">
                 <img src="./assets/img/arrow_back.png" alt="" />
@@ -45,7 +62,7 @@
             </div>
 
         </main>
-    </div>
+    </div> -->
 </body>
 
 </html>
