small css update

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 
-    <script src="../join/js/mini_backend.js"></script>
-    <script src="../join/js/globalScript.js"></script>
-    <script src="../join/js/index.js"></script>
-    <script src="../join/js/globalVar.js"></script>
-    <script src="../join/js/globalHTML.js"></script>
+    <script src="../js/mini_backend.js"></script>
+    <script src="../js/globalScript.js"></script>
+    <script src="../js/index.js"></script>
+    <script src="../js/globalVar.js"></script>
+    <script src="../js/globalHTML.js"></script>
 
-    <link rel="stylesheet" href="../join/css/index.css">
-    <link rel="stylesheet" href="../join/css/globalStyle.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/globalStyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="../join/img/logoDark.svg">
+    <link rel="icon" type="image/x-icon" href="../img/logoDark.svg">
 </head>
 
 <body onload="init()">
@@ -29,10 +29,10 @@
             <h1>Log in</h1>
             <div class="loginFields">
                 <div class="globalInput">
-                    <input id="email" type="enterEmail" placeholder="E-Mail"> <img src="../join/img/emailIcon.png">
+                    <input id="email" type="enterEmail" placeholder="E-Mail"> <img src="../img/emailIcon.png">
                 </div>
                 <div class="globalInput">
-                    <input id="password" placeholder="Password" type="password"> <img src="../join/img/passwordIcon.png">
+                    <input id="password" placeholder="Password" type="password"> <img src="../img/passwordIcon.png">
                 </div>
                 <div class="wrongLogin" id="loginFail"></div>
             </div>
